--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0",
+    "d3": "^7.8.4",
+    "react-d3-library": "^1.1.8"
   }
 }
